added another recipe, fixed minor layout issue

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                     <div class="btns">
                         <button class="recipe" id="recipe1">Con Olio</button>
                         <button class="recipe" id="recipe2">Senza Olio</button>    
+                        <button class="recipe" id="recipe3">Senza Olio v2</button>    
                     </div>
                     <div id="form-container" class="form-container">
                         <p class="balenina" >🐟 🐟</p>
