changed names and backgorund

--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
 <body>
     <div class="content">
         <header>
-            <h1>🍕 Calcola Pizza 🍕</h1>
+            <h1>🍕 PIZZANIC 🍕</h1>
         </header>
         <main>
             <div class="flex-container">
                 <div class="inputArea">
                     <div class="btns">
-                        <button class="recipe" id="recipe1">Con Olio</button>
-                        <button class="recipe" id="recipe2">Senza Olio</button>    
-                        <button class="recipe" id="recipe3">Senza Olio v2</button>    
+                        <button class="recipe" id="recipe1">70% Idratazione</button>
+                        <button class="recipe" id="recipe2">65% Idratazione</button>    
+                        <button class="recipe" id="recipe3">Pizza Devota</button>    
                     </div>
                     <div id="form-container" class="form-container">
                         <p class="balenina" >🐟 🐟</p>
